fix(icon): from partially getting cut off in some scenarios

--- a/src/client/styles/main/host.scss
+++ b/src/client/styles/main/host.scss
@@ -2,7 +2,9 @@
  * HOST
  *******/
 :host {
-	contain: paint style; // layout causes vertical alignment issue in chrome v71.0.3+
+	// paint can cause icon to be partially cut off
+	// layout causes vertical alignment issue in chrome v71.0.3+
+	contain: style;
 	display: inline-block;
 }
 :host([hidden]) {
